adding items to the list of atendimentos

--- a/src/pages/chamados/chamados.scss
+++ b/src/pages/chamados/chamados.scss
@@ -20,4 +20,9 @@ page-chamados {
     margin: 0px !important;
     height: 100% !important;
   }
+
+  .item-inner{
+    padding: 0px !important;
+    margin: 0px !important;
+  }
 }
