removing menu from the app component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,32 +1,1 @@
-<ion-menu [content]="content">
-  <ion-header padding>
-    <div class="side-menu">
-      <div class="first-section">
-        <img class="img-avatar" src="assets/img/avatar.jpg">
-      </div>
-      <div class="second-section">
-        <ion-title>I'm Groot</ion-title>
-      </div>
-    </div>
-    <!-- <ion-toolbar color="primary">
-      <ion-title>Menu</ion-title>
-    </ion-toolbar> -->
-  </ion-header>
-  <ion-content>
-    <ion-list no-lines>
-      <button ion-item>
-        <ion-icon name="md-person" item-start></ion-icon>
-        Perfil
-      </button>
-      <button ion-item>
-        <ion-icon name="pulse" item-start></ion-icon>
-        Graficos
-      </button>
-      <button ion-item>
-        <ion-icon name="chatbubbles" item-start></ion-icon>
-        Chat
-      </button>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-<ion-nav #content [root]="rootPage" if></ion-nav>
+<ion-nav [root]="rootPage" if></ion-nav>
