--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,29 +1,35 @@
 .login-page {
 
+  .list-md .item-block {
+    border-bottom: 1px solid #D1D0D0;
+  }
+  .list-md .item-block .item-inner {
+    border-bottom: 0;
+  }
 
-    background-color: #2c3e50 !important;
+  .login-form {
+    flex: 1;
+    margin-top: 150px;
+    text-align: center;
+}
 
-
-    ion-row {
-        align-items: center;
-        text-align: center;
-    }
+  .logo img {
+    width: 500px !important;
+  }
 
     ion-list {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    .login-form {
-        flex: 1;
+        width: 85%;
+        margin-left: 5%;
+        margin-top: 5%;
     }
 
     .login-button {
-        font-size: 1em;
+        margin-top: 30px;
+        font-size: 1.2em;
+        background: linear-gradient(to right, #3F5EFB, #FC466B) !important;
+        width: 85%;
+        margin-left: 05%;
+        border-radius: 20px;
     }
 
 }
-
-// .login-page {
-//   background-color: #2c3e50;
-// }
