--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #3F5EFB ,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #3498db,
-  dark:       #222
+  dark:       #222,
 );
 
 
