--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,3 +1,9 @@
 page-details {
 
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
 }
