--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -14,7 +14,19 @@ page-details {
     }
 
     ion-icon {
-      font-size: 1.7rem;
+      font-size: 2.2rem !important;
+    }
+  }
+
+  ion-fab {
+    top: 20rem !important;
+    right: 2rem !important;
+    font-size: 5px !important;
+    box-shadow: none !important;
+
+    i {
+      color: #3F5EFB;
+      font-size: 1.8rem !important;
     }
   }
 }
