--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,7 +22,10 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
+$text-color:        #212121;
+$background-color:  #fff;
+// $toolbar-background: #303F9F;
+// $toolbar-text-color: #212121;
 
 
 // Named Color Variables
@@ -34,13 +37,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #3F5EFB,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #3498db,
-  dark:       #222,
-  white:       #e6e6e4
+  primary:    #303F9F,
+  secondary:  #3F51B5,
+  accent:     #448AFF,
+  dark:       #212121
 );
+
 
 
 // App iOS Variables
