--- a/src/pages/chamados/chamados.scss
+++ b/src/pages/chamados/chamados.scss
@@ -1,22 +1,28 @@
 @import './../../theme/variables.scss';
 
 page-chamados {
-
-
-
-  ion-content {
-    background-color:   rgb(248, 246, 246) !important;
-
-    ion-card {
-      ion-card-header{
-        .data-atendimento {
-          p {
-            color: grey;
-          }
-        }
+  ion-header {
+    ion-navbar {
+      ion-title {
+        text-align: center !important;
       }
     }
   }
+
+  ion-content {
+    ion-card {
+      h2 {
+        color: #3F51B5 !important;
+      }
+      p {
+        color: #212121 !important;
+      }
+    }
+
+    }
+  }
+
+  .gps {
 
 
   .input-wrapper{
