--- a/src/pages/chamados/chamados.scss
+++ b/src/pages/chamados/chamados.scss
@@ -1,4 +1,4 @@
-@import './../../theme/variables.scss';
+@import "./../../theme/variables.scss";
 
 page-chamados {
   ion-header {
@@ -11,39 +11,34 @@ page-chamados {
 
   ion-content {
     ion-card {
+      border-radius: 05px !important;
       h2 {
-        color: #3F51B5 !important;
+        color: #3f51b5 !important;
       }
       p {
         color: #212121 !important;
       }
     }
-
-    }
   }
 
-  .gps {
-
-
-  .input-wrapper{
+  .input-wrapper {
     text-align: center;
   }
 
-
-  .chamado-segment{
+  .chamado-segment {
     color: white !important;
     border-color: white !important;
-    .segment-md .segment-button.activated, .segment-md .segment-button.segment-activated{
-
+    .segment-md .segment-button.activated,
+    .segment-md .segment-button.segment-activated {
     }
   }
 
-  .btn-options{
+  .btn-options {
     margin: 0px !important;
     height: 100% !important;
   }
 
-  .item-inner{
+  .item-inner {
     padding: 0px !important;
     margin: 0px !important;
   }
