fix: fix problem with button ui

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -49,7 +49,7 @@
         font-size: 1.3em;
         background: linear-gradient(to right, #0097A7,#00BCD4) !important;
         border-radius: 12px;
-        height: 20% !important;
+        height: 4rem !important;
         text-transform: capitalize !important;
         i {
           padding-right: 03% !important;
