--- a/src/pages/pesquisa/pesquisa.scss
+++ b/src/pages/pesquisa/pesquisa.scss
@@ -1,3 +1,21 @@
 page-pesquisa {
 
+  ul {
+    padding: 0px;
+
+    &.rating li {
+      padding: 5px 10px !important;
+      background: none;
+      color: #ffb400;
+
+      ion-icon {
+        font-size: 50px;
+      }
+    }
+  }
+
+  .pergunta{
+    color: white;
+  }
+
 }
