chore: implement somethings to the presentation

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,7 +1,7 @@
 @import './../../theme/variables.scss';
 
 .login-page {
-  background: url('./../../assets/img/Backgroud_Connecta_1920x1080_Portrait_Blur_12.jpg') no-repeat  center !important;
+  background: url('/assets/img/Backgroud_Connecta_1920x1080_Portrait_Blur_12.jpg') no-repeat  center !important;
   background-size: 100% !important;
 
   .list-md .item-block {
