--- a/src/pages/pesquisa/pesquisa.scss
+++ b/src/pages/pesquisa/pesquisa.scss
@@ -1,15 +1,24 @@
 page-pesquisa {
 
+  ion-slide {
+    p {
+      line-height: 145%;
+    }
+    h3 {
+      color: #212121 !important;
+    }
+  }
+
   ul {
     padding: 0px;
 
     &.rating li {
       padding: 5px 10px !important;
       background: none;
-      color: #ffb400;
+      color: #448AFF;
 
       ion-icon {
-        font-size: 50px;
+        font-size: 45px;
       }
     }
   }
