chore: implement the action sheet to allow user take a photo of begin attendence and end attendence

--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -40,3 +40,19 @@ page-details {
     }
   }
 }
+
+.action-sheet {
+  .inicio {
+    .ion-md-camera {
+      color: #3F51B5 !important;
+    }
+  }
+
+  .fim {
+    .ion-md-camera {
+      color: #448AFF !important;
+    }
+  }
+}
+
+
