chore: add the new icon, new splash and make some changes in fab button on detail atendimento

--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -31,6 +31,14 @@ page-details {
       color: #448AFF !important;
       font-size: 2.3rem !important;
     }
+
+    .indica_inicio {
+      background-color: #448AFF;
+
+      ion-icon {
+        color: #fff !important;
+      }
+    }
   }
 
 
@@ -54,5 +62,3 @@ page-details {
     }
   }
 }
-
-
