refactor: changing the style of the app and adding tabs.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $background-color:  #fff;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #303F9F,
+  primary:    #246af9,
   secondary:  #3F51B5,
   accent:     #448AFF,
   dark:       #212121
