add validation to the screens app

--- a/src/components/forms/form-monitoramento.html
+++ b/src/components/forms/form-monitoramento.html
@@ -16,7 +16,7 @@
             </ion-col>
             <ion-col col-10>
               <ion-card-content>
-                <a (click)="showPrompt('Inicial')">
+                <a (click)="showPrompt('inicial')">
                   <h1>Deslocamento Incial</h1>
                   <h2>{{ monitoramento?.km_inicial }} km - {{ monitoramento?.data_hora_inicial_km | date: 'HH:mm'}} h </h2>
                 </a>
@@ -37,7 +37,7 @@
             </ion-col>
             <ion-col col-10>
               <ion-card-content>
-                <a (click)="showPrompt('Final')">
+                <a (click)="showPrompt('final')">
                   <h1>Deslocamento Final</h1>
                   <h2>{{ monitoramento?.km_final }} km - {{ monitoramento?.data_hora_final_km | date: 'HH:mm' }} h</h2>
                 </a>
