--- a/src/components/forms/form-monitoramento.scss
+++ b/src/components/forms/form-monitoramento.scss
@@ -2,3 +2,104 @@ p {
   font-size: 16px;
   color: linear-gradient(135deg, #be2df8 31%, #be2df8 31%, #246af9 99%);
 }
+
+page-tabs {
+  ion-card {
+    .card{
+      border-radius: 10px;
+      height: 60%
+    }
+  }
+}
+
+.wrapper {
+  height: 500px;
+  font-family: 'Helvetica';
+  font-size: 14px;
+}
+
+.StepProgress {
+  position: relative;
+  padding-left: 45px;
+  list-style: none;
+  
+  &::before {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 15px;
+    width: 10px;
+    height: 100%;
+    border-left: 2px solid #CCC;
+  }
+  
+  &-item {
+    position: relative;
+    counter-increment: list;
+    
+    &:not(:last-child) {
+      padding-bottom: 20px;
+    }
+    
+    &::before {
+      display: inline-block;
+      content: '';
+      position: absolute;
+      left: -30px;
+      height: 100%;
+      width: 10px;
+    }
+    
+    &::after {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      left: -37px;
+      width: 12px;
+      height: 12px;
+      border: 2px solid #CCC;
+      border-radius: 50%;
+      background-color: #FFF;
+    }
+    
+    &.is-done {
+      &::before {
+        border-left: 2px solid #246af9;
+      }
+      &::after {
+        content: "✔";
+        font-size: 10px;
+        color: #FFF;
+        text-align: center;
+        border: 2px solid #246af9;
+        background-color: #246af9;
+      }
+    }
+    
+    &.current {
+      &::before {
+        border-left: 2px solid #246af9;
+      }
+      
+      &::after {
+        content: counter(list);
+        padding-top: 1px;
+        width: 19px;
+        height: 18px;
+        top: -4px;
+        left: -40px;
+        font-size: 14px;
+        text-align: center;
+        color: #246af9;
+        border: 2px solid #246af9;
+        background-color: white;
+      }
+    }
+  }
+  
+  strong {
+    display: block;
+  }
+}
