form-monitoramento: fix ngif conditions

--- a/src/components/forms/form-monitoramento.html
+++ b/src/components/forms/form-monitoramento.html
@@ -6,7 +6,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row>
+  <ion-row *ngIf="canShowInicio">
     <ion-col col-12>
       <ion-card padding >
         <ion-item>
@@ -26,7 +26,8 @@
         </ion-item>
       </ion-card>
     </ion-col>
-
+  </ion-row>
+  <ion-row *ngIf="canShow">
     <ion-col col-12>
       <ion-card padding >
 
