feature: added style in the tabs.

--- a/src/components/forms/form-monitoramento.scss
+++ b/src/components/forms/form-monitoramento.scss
@@ -1,4 +1,11 @@
-p {
-  font-size: 16px;
-  color: linear-gradient(135deg, #be2df8 31%, #be2df8 31%, #246af9 99%);
+h3 {
+  font-size: 25px;
+  color: #c1c1c1;
+  padding-top: 200px; 
+} 
+
+.monitoramento-button {
+  width: 70%;
+  margin-left: 15%;
+  height: 4rem !important;
 }
