style: added new style to header component.

--- a/src/components/forms/form-monitoramento.html
+++ b/src/components/forms/form-monitoramento.html
@@ -1,6 +1,6 @@
 <ion-grid>
 
-  <img style="margin: 20px" src='{{imagePath()}}' />
+  <img style="padding-top: 70px;" src='{{imagePath()}}' />
 
   <ion-row *ngIf="monitoramento?.tipo === tipo">
     <ion-col col-12>
