interacao-tecnico: create new field to this component
new field to user insert the details of call

resolve #26

--- a/src/pages/modal-interacao/modal-interacao.scss
+++ b/src/pages/modal-interacao/modal-interacao.scss
@@ -5,6 +5,11 @@ page-modal-interacao {
             font-size: 1.1em;
         }
     }
+      .resumo-atendimento {
+        ::-webkit-input-placeholder {
+            font-size: 1.1em;
+        }
+    }
 
     .mesmo-cnpj {
         font-size: 1em;
