--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -12,6 +12,9 @@ page-details {
     h2 {
       color: #3F51B5 !important;
     }
+    .notice {
+      color: rgb(145, 0, 0) !important;
+    }
     p {
       color: #212121 !important;
     }
