assinatura: finish assinatura upload implementation

--- a/src/pages/details/components/signature/signature.html
+++ b/src/pages/details/components/signature/signature.html
@@ -13,12 +13,8 @@
       <ion-input formControlName="nome" placeholder="Insira o nome!"></ion-input>
     </ion-item>
     <ion-item>
-        <ion-label stacked color="primary">Sobrenome</ion-label>
-        <ion-input formControlName="sobrenome" placeholder="Insira o Sobrenome completo!"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label stacked color="primary">Rg</ion-label>
-      <ion-input formControlName="rg" placeholder="Insira o rg!"></ion-input>
+      <ion-label stacked color="primary">RG/CPF</ion-label>
+      <ion-input formControlName="documento_id" placeholder="Insira o rg/cpf!"></ion-input>
     </ion-item>
     <br/>
     <ion-item>
