--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -27,9 +27,8 @@ page-details {
     }
   }
 
-  ion-fab {
+  ion-fab-list {
     top: -1.7rem !important;
-
     i {
       color: #448AFF !important;
       font-size: 2.3rem !important;
@@ -42,7 +41,35 @@ page-details {
         color: #fff !important;
       }
     }
+    button[disabled]{
+      background-color: #F4F4F4 !important;
+      box-shadow: none !important;
+      opacity: .4;
+      pointer-events:none;
+      color: rgb(85, 85, 85);
+      i {
+        color:  rgb(212, 212, 212) !important;
+      }
+      ion-icon {
+        color: rgb(204, 204, 204);
+      }
+    }
+    button {
+      background-color: #fff !important;
+      box-shadow: 0px 2px 4px rgba(0,0,0,0.15), 0px 4px 8px rgba(0,0,0,0.2) !important;
+      &:hover {
+        background-color: #448AFF !important;
+        i {
+          color: #fff !important;
+        }
+        ion-icon {
+          color: #fff;
+        }
+      }
+    }
+
   }
+
 
 
   .address {
